Fix overflow bug on mobile

--- a/src/theme/modules/Header--mobile.scss
+++ b/src/theme/modules/Header--mobile.scss
@@ -2,11 +2,12 @@
   height: 90px;
   width: 100%;
   position: relative;
+  overflow-x: hidden;
 }
 
 .header__float-wrapper {
   width: 100%;
-  position: absolute;
+  position: fixed;
   top: 0;
   margin: 0 auto;
   left: 0;
